# dapodix

./: .gitignore  .travis.yml  README.md  pyproject.toml  requirements.txt  setup.py
dapodix/: __init__.py  __main__.py  click_context.py  peserta_didik.py  utils.py  version.py
dapodix/gui/: __init__.py  login.py  main.py
dapodix/peserta_didik/: __init__.py  eksport.py  excel.py  kembali_bersekolah.py  random_longitudinal.py  registrasi.py
tests/: test_dapodix.py  test_utils.py
