[tool.poetry]
name = "dapodix"
version = "0.1.0"
description = "Aplikasi pembantu Dapodik"
authors = ["hexatester <revolusi147id@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
openpyxl = "^3.0.5"
dapodik = "^0.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
yapf = "^0.30.0"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
