[tool.poetry]
name = "dapodix"
version = "0.1.0"
description = "Alat bantu aplikasi Dapodik"
authors = ["hexatester <revolusi147id@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/hexatester/dapodix"
repository = "https://github.com/hexatester/dapodix"
include = [
    "LICENSE",
    "LISENSI",
    "README.md",
    "README-EN.md",
]

[tool.poetry.dependencies]
python = "^3.7"
openpyxl = "^3.0.7"
click = "^8.0.1"
cachetools = "^4.2.2"
dapodik = "^0.16.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.910"
black = "^21.7b0"
types-cachetools = "^0.1.10"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
